<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="Computer" Id="{c36ffcbf-7d9f-49ce-a205-de9de6a1157e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AnInput : ARRAY[0..100] OF INT;
	AnOutput : ARRAY[0..100] OF INT;
	DigInput : ARRAY[0..100] OF BYTE;	
	DigOutput : ARRAY[0..100] OF BYTE;
	SimulationAktiv:BOOL;
	Versionsbezeichnung: STRING := 'Labor Linearachse V2.0';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>