<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="DatenRangieren" Id="{2fefa47b-eff6-48c5-af0c-55946ca534be}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION DatenRangieren : BOOL
VAR_INPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (Computer.SimulationAktiv = TRUE) THEN
;	// es werden die Daten von den Arrays verwendet
ELSE
	Computer.DigInput[0] := Hardware.DI_0_1_bis_8;
	Computer.DigInput[1] := Hardware.DI_0_9_bis_16;
	Computer.DigInput[2] := Hardware.DI_1_1_bis_8;
	Computer.DigInput[3] := Hardware.DI_1_9_bis_16;
	
	Hardware.DQ_0_1_bis_8 := Computer.DigInput[0];
	Hardware.DQ_0_9_bis_16 := Computer.DigInput[1];
	Hardware.DQ_1_1_bis_8 := Computer.DigInput[2];
	Hardware.DQ_1_9_bis_16 := Computer.DigInput[3];
	
	
	Computer.AnInput[0] :=  Hardware.AI_0_1;
	Computer.AnInput[1] :=  Hardware.AI_0_2;
	Computer.AnInput[2] :=  Hardware.AI_0_3;
	Computer.AnInput[3] :=  Hardware.AI_0_4;
	
	Hardware.AQ_0_1 := Computer.AnOutput[0];
	Hardware.AQ_0_2 := Computer.AnOutput[1];
	Hardware.AQ_0_3 := Computer.AnOutput[2];
	Hardware.AQ_0_4 := Computer.AnOutput[3];	
END_IF

Sim.B1:=Computer.DigInput[0].0;]]></ST>
    </Implementation>
    <LineIds Name="DatenRangieren">
      <LineId Id="9" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="3" />
      <LineId Id="26" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="41" Count="2" />
      <LineId Id="27" Count="0" />
      <LineId Id="30" Count="7" />
      <LineId Id="12" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>